# seqan

./: .cproject  .gitignore  .project  Makefile  Makefile.rules  PG9_Test.fasta  README.md
debug/: main
ides/: eclipse.xml
release/: main
sandbox/SeqIg_sandbox/: CMakeLists.txt  StructDefs  libboost_container.dylib  libboost_filesystem.dylib  libboost_system.dylib
sandbox/SeqIg_sandbox/apps/: CMakeLists.txt
sandbox/SeqIg_sandbox/apps/SeqIg/: AlignAntibody.cpp  AlignAntibody.h  AntibodyJunction.cpp  AntibodyJunction.h  CMakeLists.txt  DatabaseHandler.cpp  DatabaseHandler.h  DatabaseIO.cpp  DatabaseIO.h  INFO  SeqIg.cpp  SeqIg.h  SeqIgUtility.cpp  SeqIgUtility.h  StructDefs.h
sandbox/SeqIg_sandbox/apps/test/: CMakeLists.txt  test.cpp
sandbox/SeqIg_sandbox/demos/: CMakeLists.txt
sandbox/SeqIg_sandbox/tests/: CMakeLists.txt
seqig_data/Ig/heavy/human/V/: IGHV3.fasta  IGHV6.fasta  family.fasta  human_gl_V.fasta
seqig_data/Ig/heavy/human/V/genes/: IGHV1.fasta  IGHV2.fasta  IGHV3.fasta  IGHV4.fasta  IGHV5.fasta  IGHV7.fasta
seqig_data/Ig/heavy/mouse/: mouse_gl_D.nal  mouse_gl_D.nin  mouse_gl_J.nal  mouse_gl_J.nin  mouse_gl_V.nal  mouse_gl_V.nhr  mouse_gl_V.nin  mouse_gl_V.nog  mouse_gl_V.nsd  mouse_gl_V.nsi  mouse_gl_V.nsq
seqig_data/Ig/light/human/: human_gl_D.nal  human_gl_D.nin  human_gl_J.fasta  human_gl_J.fasta.nin  human_gl_J.fasta.nsq  human_gl_J.nhr  human_gl_J.nin  human_gl_J.nsd  human_gl_J.nsi  human_gl_V.fasta  human_gl_V.fasta.nhr  human_gl_V.fasta.nin  human_gl_V.fasta.nsd  human_gl_V.fasta.nsq  human_gl_V.nin  human_gl_V.nsi
seqig_data/TCR/human/: human_TCR_D.nal  human_TCR_D.nin  human_TCR_J.fasta  human_TCR_J.nal  human_TCR_J.nhr  human_TCR_J.nin  human_TCR_J.nsd  human_TCR_J.nsi  human_TCR_J.nsq  human_TCR_V.fasta  human_TCR_V.nal  human_TCR_V.nhr  human_TCR_V.nin  human_TCR_V.nsd  human_TCR_V.nsi  human_TCR_V.nsq
seqig_data/TCR/mouse/: mouse_TCR_D.fasta  mouse_TCR_D.nal  mouse_TCR_D.nhr  mouse_TCR_D.nin  mouse_TCR_D.nsd  mouse_TCR_D.nsi  mouse_TCR_J.fasta  mouse_TCR_J.nal  mouse_TCR_J.nhr  mouse_TCR_J.nin  mouse_TCR_J.nsd  mouse_TCR_J.nsi  mouse_TCR_J.nsq  mouse_TCR_V.fasta  mouse_TCR_V.nal  mouse_TCR_V.nhr  mouse_TCR_V.nin  mouse_TCR_V.nog  mouse_TCR_V.nsd  mouse_TCR_V.nsi  mouse_TCR_V.nsq
seqig_data/meta_info/germ_props/human/: properties.txt
seqig_data/meta_info/germ_props/mouse/: properties.txt
src/: .cproject  .gitignore  .project  AlignAntibody.h  AntibodyJunction.cpp  CMakeLists.txt  DatabaseHandler.h  SeqIg.cpp  SeqIgUtility.cpp  SeqIgUtility.h  StructDefs.h  main.cpp
src/Default/: AlignAntibody.d  AntibodyJunction.d  DatabaseHandler.d  SeqIg  SeqIg.d  SeqIgUtility.d  makefile  subdir.mk
